# akshara-vision

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  index.md  pyproject.toml
.github/workflows/: ci.yml
docs/: chat.md  cli-design.md  document-intelligence.md  inputs-outputs.md  instructions.md  models.md  onboarding.md  privacy.md  profiles.md  workflows.md
examples/: sample.manifest.csv  sample.txt
src/akshara_vision/: __init__.py  __main__.py
src/akshara_vision/cli/: __init__.py  app.py  ui.py  workflows.py
src/akshara_vision/core/: __init__.py  chat.py  config.py  constants.py  env.py  input_discovery.py  models.py  pipeline.py  toml_compat.py
src/akshara_vision/exporters/: __init__.py  archive.py  base.py  pdf.py  text.py
src/akshara_vision/instructions/: __init__.py  book_restoration_default.txt
src/akshara_vision/providers/: __init__.py  base.py  cloud.py  local.py  mock.py
src/akshara_vision/registries/: __init__.py  exporters.py  providers.py
tests/: test_cli_fallback.py  test_core.py
